# thanks

./: .buildpacks  .env.sample  .gitignore  .slugignore  .travis.yml  Cargo.toml  Procfile  README.md  RustConfig  build.rs  diesel_setup.md  dump.txt
http/: Cargo.toml
http/src/: lib.rs
migrations/20170112010034_create_commits/: down.sql  up.sql
migrations/20170112025704_create_releases/: down.sql  up.sql
migrations/20170125121136_create_contributors/: down.sql  up.sql
migrations/20170125121346_create_projects/: up.sql
migrations/20170125123356_add_project_to_releases/: down.sql  up.sql
migrations/20170131230339_rename_contributors_to_authors/: down.sql  up.sql
migrations/20170201210703_normalize_commits/: down.sql  up.sql
migrations/20170205125626_add_visible_to_authors/: down.sql  up.sql
migrations/20170310224929_add_visible_to_releases/: down.sql  up.sql
migrations/20170311163127_authors_name_and_email_should_be_unique/: down.sql  up.sql
migrations/20170313150548_use_commit_sha_for_pk/: down.sql  up.sql
migrations/20170317141957_maintenance/: down.sql  up.sql
migrations/20170322172200_maintenance_initial_row/: down.sql  up.sql
migrations/20170323004242_add_link_to_releases/: down.sql  up.sql
migrations/20170323223057_update_releases_with_links/: down.sql  up.sql
migrations/20170323224310_set_releases_link_not_null/: down.sql  up.sql
migrations/20180315213800_add_dir_path_to_projects/: down.sql  up.sql
public/: browserconfig.xml
public/styles/: bootstrap.css  custom.css  styles.css
src/: authors.rs  commits.rs  lib.rs  mailmap.rs  main.rs  models.rs  projects.rs  releases.rs  routes.rs  schema.rs
templates/: about.hbs  all-time.hbs  container.hbs  index.hbs  regex.hbs  release.hbs
