[package]
authors = ["steveklabnik <steve@steveklabnik.com>"]
name = "thanks"
version = "0.1.0"

[dependencies]
caseless = "0.1.3"
futures = "0.1.12"
git2 = "0.6.4"
lazy_static = "0.2.6"
regex = "0.2.1"
serde_json = "0.9.9"
unicode-normalization = "0.1.4"

[dependencies.sparkles]
git = "https://github.com/steveklabnik/sparkles.git"
