[package]
authors = ["Steve Klabnik <steve@steveklabnik.com>"]
#build = "build.rs"
name = "thanks"
version = "0.1.0"

[[bin]]
doc = false
name = "thanks"

[[bin]]
doc = false
name = "maintenance"
path = "src/bin/maintenance.rs"

[[bin]]
doc = false
name = "project-manager"
path = "src/bin/project-manager.rs"


[build-dependencies]
diesel = { version = "1.1.1", features = ["postgres"] }
dotenv = "0.11.0"

[dependencies]
caseless = "0.2.0"
clap = "2.31.1"
diesel = { version = "1.1.1", features = ["postgres"] }
dotenv = "0.11.0"
futures = "0.1.18"
git2 = "0.7.0"
gotham = "0.2.0"
gotham_derive = "0.2.0"
handlebars = "0.32.0"
hyper = "0.11.18"
lazy_static = "1.0.0"
mime = "0.3.5"
regex = "0.2.6"
reqwest = "0.8.5"
semver = "0.9.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
slog = "2.1.1"
slog-term = "2.3.0"
slog-async = "2.2.0"
unicode-normalization = "0.1.5"
time = "0.1.39"
toml = "0.4.5"

