[package]
name = "http"
version = "0.1.0"
authors = ["Steve Klabnik <steve@steveklabnik.com>"]

[dependencies]
futures = "0.1.7"
reqwest = "0.4.0"
serde = "0.9.0"
serde_derive = "0.9.0"
serde_json = "0.9.0"
diesel = "0.11.0"
diesel_codegen = { version = "0.11.0", features = ["postgres"] }
dotenv = "0.8.0"
caseless = "0.1.2"
unicode-normalization = "0.1.0"
clap = "2.19.0"
regex = "0.2.1"

[dependencies.handlebars]
version = "0.25.0"
features = ["serde_type"]

[dependencies.hyper]
branch = "master"
git = "https://github.com/hyperium/hyper"
