[package]
authors = ["Steve Klabnik <steve@steveklabnik.com>"]
name = "http"
version = "0.1.0"

[dependencies]
caseless = "0.1.2"
clap = "2.19.0"
diesel = "0.12.0"
dotenv = "0.8.0"
futures = "0.1.7"
futures-cpupool = "0.1.4"
regex = "0.2.1"
reqwest = "0.4.0"
serde = "0.9.0"
serde_derive = "0.9.0"
serde_json = "0.9.0"
slog = "1.4.1"
slog-term = "1.3.5"
unicode-normalization = "0.1.0"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.12.0"

[dependencies.handlebars]
features = ["serde_type"]
version = "0.25.0"

[dependencies.hyper]
branch = "master"
git = "https://github.com/hyperium/hyper"
